fix spacing on public repo pages

--- a/app/styles/app/layout.sass
+++ b/app/styles/app/layout.sass
@@ -43,7 +43,7 @@
 
 #main
   position: relative
-  padding: 20px 30px 80px
+  padding: 2em $column-gutter/2 5em
 
 .wrapper
   overflow: hidden
