--- a/app/styles/app/layouts/top.sass
+++ b/app/styles/app/layouts/top.sass
@@ -140,6 +140,9 @@ $top-height: 55px
       .navigation-handle span:not(.sync-spinner)
         padding: 0 .2em
 
+    .centered & .navigation li:last-child
+      margin-right: 0
+
     .navigation-nested
       display: none
       position: absolute
